fixed location wrap

--- a/src/app/bio/bio.component.css
+++ b/src/app/bio/bio.component.css
@@ -4,7 +4,7 @@
   margin: 0 20px;
   margin-bottom: 20px;
   height: 110px;
-  grid-template-columns: 90px 1fr;
+  grid-template-columns: auto 1fr;
   grid-template-rows: 60px 1fr 1fr;
   font-family: 'Inter', sans-serif;
   letter-spacing: var(--letter-spacing-xs);
@@ -35,6 +35,7 @@
 }
 
 .bio--location {
+  padding-right: 15px;
 }
 
 .bio--url {
